Alterando estrutura da seção de serviços

--- a/index.html
+++ b/index.html
@@ -78,25 +78,37 @@
     <h2 class="about-subtitle">Personal Organizer</h2>
     <div class="about-text">
       <h4>Quem sou?</h4>
-      <p>"
-        Olá, sou Andréia Salustiano Organizadora Profissional, estou aqui para ajudar você a transformar a sua vida
-        através da organização.
-        Sou Personal Organizer desde 2018, especialista em Organização de Mudanças e Organização Residencial.
-        Sou mãe, profissional, dona de casa e uma pessoa em busca de constante aprendizado. Também formada em Nutrição,
-        Gestão Empresarial e Design de Interiores. Com tantas habilidades desenvolvidas, busco fazer uma mistura de tudo
-        isso e levar as melhores soluções para cada lar. Afinal, cada casa é um caso.
-        Através da Organização dos ambientes busco levar mais qualidade de vida, bem estar e praticidade para as
-        pessoas, de forma prática e ágil e com muito cuidado e dedicação.
-        A paixão por Organização é tão grande, que meu lar ficou pequeno, então transformei essa paixão em propósito de
-        vida"
       <p>
-        Mas a Déia não está sozinha nesse propósito, tenho um time incrível que auxilia nessa jornada.
+        Olá, sou Andréia Salustiano Organizadora Profissional, estou aqui para
+        ajudar você a transformar a sua vida através da organização.
+      </p>
+      <p>
+        Sou Personal Organizer desde 2018, especialista em Organização de
+        Mudanças e Organização Residencial.
+      </p>
+      <p>
+        Sou mãe, profissional, dona de casa e uma pessoa em busca de constante
+        aprendizado. Também formada em Nutrição, Gestão Empresarial e Design de
+        Interiores. Com tantas habilidades desenvolvidas, busco fazer uma mistura
+        de tudo isso e levar as melhores soluções para cada lar. Afinal, cada
+        casa é um caso.
+      </p>
+      <p>
+        Através da Organização dos ambientes busco levar mais qualidade de vida,
+        bem estar e praticidade para as pessoas, de forma prática e ágil e com
+        muito cuidado e dedicação.
+      </p>
+      A paixão por Organização é tão grande, que meu lar ficou pequeno, então
+      transformei essa paixão em propósito de vida
+      <p>
+        Mas a Déia não está sozinha nesse propósito, tenho um time incrível que
+        auxilia nessa jornada.
       </p>
       <span>
         <h4>Quer saber mais sobre como posso te ajudar?</h4>
       </span>
 
-      <a class="button" href="#contact">CLIQUE AQUI</a>
+      <a class="btn btn-primary" href="#contact">CLIQUE AQUI</a>
       </p>
     </div>
   </section>
@@ -104,40 +116,103 @@
   <section id="work" class="work">
     <h1>Serviços</h1>
 
-    <div class="content">
-      <div class="card" style="width: 40%;">
-        <img src="./img//cozinha/cozinha_01.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">ORGANIZAÇÃO RESIDENCIAL</h5>
-          <p class="card-text">Some quick example text to build on the card
-            title and make up the bulk of the card's
-            content.</p>
-          <a href="#contact" class="btn button">Go somewhere</a>
+    <!-- Comeco do carousel -->
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="d-block w-100 content">
+            <div class="card">
+              <img src="./img//banheiro/banheiro_01.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">ORGANIZAÇÃO</h5>
+                <h5 class="card-title">RESIDENCIAL</h5>
+                <p class="card-text">Some quick example text to build on the card
+                  title and make up the bulk of the card's
+                  content.</p>
+                <a style="color: #000; text-decoration: underline; " href="#" class="portfolio-link">Saiba Mais
+                </a>
+                <a href="#contact" class="btn btn-primary">Fale Comigo</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="d-block w-100 content">
+            <div class="card">
+              <img src="./img//mudanca/mudanca_01.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">ORGANIZAÇÃO</h5>
+                <h5 class="card-title">MUDANÇAS</h5>
+                <p class="card-text">Some quick example text to build on the card
+                  title and make up the bulk of the card's
+                  content.</p>
+                <a style="color: #000; text-decoration: underline; " href="#" class="portfolio-link">Saiba Mais</a>
+                <a href="#contact" class="btn btn-primary">Fale Comigo</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="d-block w-100 content">
+            <div class="card">
+              <img src="./img//closet/closet_01.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">ORGANIZAÇÃO</h5>
+                <h5 class="card-title">BABY</h5>
+                <p class="card-text">Some quick example text to build on the card
+                  title and make up the bulk of the card's
+                  content.</p>
+                <a style="color: #000; text-decoration: underline; " href="#" class="portfolio-link">Saiba Mais</a>
+                <a href="#contact" class="btn btn-primary">Fale Comigo</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="d-block w-100 content">
+            <div class="card">
+              <img src="./img//documentos/documentos_01.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">CONSULTORIA DE</h5>
+                <h5 class="card-title">ORGANIZAÇÃO</h5>
+                <p class="card-text">Some quick example text to build on the card
+                  title and make up the bulk of the card's
+                  content.</p>
+                <a style="color: #000; text-decoration: underline; " href="#" class="portfolio-link">Saiba Mais</a>
+                <a href="#contact" class="btn btn-primary">Fale Comigo</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="d-block w-100 content">
+            <div class="card">
+              <img src="./img//infantil/infantil_01.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">ORGANIZAÇÃO</h5>
+                <h5 class="card-title">INFANTIL</h5>
+                <p class="card-text">Some quick example text to build on the card
+                  title and make up the bulk of the card's
+                  content.</p>
+                <a style="color: #000; text-decoration: underline; " href="#" class="portfolio-link">Saiba Mais</a>
+                <a href="#contact" class="btn btn-primary">Fale Comigo</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="card" style="width: 40%;">
-        <img src="./img//cozinha/cozinha_01.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">ORGANIZAÇÃO MUDANÇAS</h5>
-          <p class="card-text">Some quick example text to build on the card
-            title and make up the bulk of the card's
-            content.</p>
-          <a href="#contact" class="btn button">Go somewhere</a>
-        </div>
-      </div>
-      <div class="card" style="width: 40%;">
-        <img src="./img//cozinha/cozinha_01.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">ORGANIZAÇÃO BABY</h5>
-          <p class="card-text">Some quick example text to build on the card
-            title and make up the bulk of the card's
-            content.</p>
-          <a href="#contact" class="btn button">Go somewhere</a>
-        </div>
-      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-
-
+    <!-- fim do carousel -->
   </section>
 
   <section id="portfolio" class="portfolio">
