--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Andreia Organizer</title>
+  <title>Andreia Salustiano Organizer</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
@@ -14,6 +14,20 @@
 <body>
 
   <header id="home">
+
+    <button class="menu-button">
+      <svg class="hamburger" viewBox="0 0 100 52" width="35" height="25">
+        <rect width=" 120" height="10" fill="#012A36"></rect>
+        <rect y="25" width="120" height="10" fill="#012A36"></rect>
+        <rect y="50" width=" 120" height="10" fill="#012A36"></rect>
+      </svg>
+
+      <svg class="close-icon" viewBox="0 0 100 52" width="35" height="25">
+        <line x1="2" y1="58" x2="98" y2="2" stroke-width="10" stroke="#012A36" />
+        <line x1="2" y1="2" x2="98" y2="58" stroke-width="10" stroke="#012A36" />
+      </svg>
+    </button>
+
     <img class="logo" src="./img/home/logo.svg" alt="">
     <div class="contact-info">
       <div>
@@ -48,26 +62,8 @@
     </ul>
   </nav>
 
-  <div class="welcome">
-
-    <button class="menu-button">
-      <svg class="hamburger" viewBox="0 0 100 52" width="35" height="25">
-        <rect width=" 120" height="10" fill="rgb(01, 43, 71)"></rect>
-        <rect y="25" width="120" height="10" fill="rgb(01, 43, 71)"></rect>
-        <rect y="50" width=" 120" height="10" fill="rgb(01, 43, 71)"></rect>
-      </svg>
-
-      <svg class="close-icon" viewBox="0 0 100 52" width="35" height="25">
-        <line x1="2" y1="58" x2="98" y2="2" stroke-width="10" stroke="rgb(01, 43, 71)" />
-        <line x1="2" y1="2" x2="98" y2="58" stroke-width="10" stroke="rgb(01, 43, 71)" />
-      </svg>
-    </button>
-
-    <!-- <h1>Welcome to my<span>Portfolio</span></h1> -->
-  </div>
-
   <section class="intro">
-    <div class="intro-left">
+    <div>
       <img src="img/home/home.png" alt="A closet">
     </div>
   </section>
@@ -108,7 +104,7 @@
         <h4>Quer saber mais sobre como posso te ajudar?</h4>
       </span>
 
-      <a class="btn btn-primary" href="#contact">CLIQUE AQUI</a>
+      <a class="btn btn-primary mt-3" href="#contact">CLIQUE AQUI</a>
       </p>
     </div>
   </section>
@@ -1346,7 +1342,6 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
   <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
-
 
 </body>
 
